--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,28 +40,29 @@
                 android:columnCount="5"
                 android:rowCount="3" >
 
-                <EditText
+                <ImageView
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/choix1"
                     android:layout_row="1"
-                    android:layout_column="0" />
+                    android:layout_column="0"
+                    android:onClick="changerCouleur"/>
 
-                <EditText
+                <ImageView
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/choix2"
                     android:layout_row="1"
                     android:layout_column="1" />
 
-                <EditText
+                <ImageView
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/choix3"
                     android:layout_row="1"
                     android:layout_column="2" />
 
-                <EditText
+                <ImageView
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/choix4"
