--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -148,6 +148,16 @@
                 android:visibility="invisible"
                 android:onClick="resetGame"
                 android:text="Nouvelle Partie"/>
+
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Son"
+                android:id="@+id/buttonOn"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true" />
+
         </RelativeLayout>
     </TableLayout>
 
